fixed background image on mobile screen size

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -47,3 +47,13 @@ h4 {
 .site-imgs {
     width: 75%;
 }
+
+@media screen and (max-width: 768px) {
+    body {
+        background-image: url("../img/space2.jpg");
+        width: 100vw;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
